--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -81,7 +81,8 @@
         background-color: rgba(211, 212, 213, 1)!important 
     }*/
 
-    #Conversation_SearchInput {
+    #Conversation_SearchInput, 
+    #frmGroup #SearchInput {
         padding: 4px 12px 4px 2px;
         border: 0;
         font-size: .9375rem;
