Hoàng Nhi - Tạo Popup tạo Nhóm (Group) và hiển thị các nhóm trong conversation
New features
- Thêm Popup tạo nhóm
- Hiển thị Nhóm trong conversation theo các điều kiện: hình ảnh nhóm (Avartar) và số lượng thành viên trong nhóm
Fixes
- Cải hiện trải nghiệm người dùng

--- a/FE/Views/Home/Message/_MessageContainerPartial.cshtml
+++ b/FE/Views/Home/Message/_MessageContainerPartial.cshtml
@@ -32,8 +32,8 @@ else
         <div class="lh-1 py-3"
             style="font-size: 12px">@Data.Messages[i].GetDateTime()</div>
         <div class="row align-items-center @(Data.Messages[i].SenderId == Data.CurrentUser.Id ? "flex-row-reverse" : "")" style="margin-bottom: 12px;">
-            <div style="width: 48px; display: @(Data.Messages[i].SenderId == Data.CurrentUser.Id ? "none" : "auto")">
-                <img class="rounded-circle"
+            <div style="width: 48px; align-self: end; display: @(Data.Messages[i].SenderId == Data.CurrentUser.Id ? "none" : "auto")">
+                <img class="rounded-circle border-bottom border-2"
                         src="@(Data.Messages[i].SenderId == Data.CurrentUser.Id ? Data.CurrentUser.ProfilePicture : Data.FriendUser.ProfilePicture)"
                         style="height: 38px; width: 38px" />
 
