--- a/FE/Views/Shared/ConfigProfile/_PeronalInforPartial.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_PeronalInforPartial.cshtml
@@ -36,7 +36,6 @@
     }
 
     .profile-picture {
-        border: 3px solid white;
         border-radius: 50%;
         background-color: white;
         position: absolute;
@@ -44,6 +43,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         object-fit: cover;
+        box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
     }
 
     .user-info {
