--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LinkU</title>
     <link rel="icon" type="image/x-icon" href="~/asset/Icon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> *@
     <link rel="stylesheet" href="/css/DatePicker.css" />
     <script src="https://kit.fontawesome.com/61ba0c914b.js" crossorigin="anonymous"></script>
     <!-- Google Fonts And Icons -->
@@ -129,6 +129,22 @@
                 });
         }
 
+        function SendRequestWSRerenderTab(userids, tab) {
+            var data = {
+                UserIds: userids,
+                TabName: tab
+            }
+            connection.invoke("RequestRerenderTab", data)
+                .then(result => {
+                    if (result.error) {
+                        ShowThongBaoThatBai("Lỗi hệ thống: " + result.message)
+                    }
+                })
+                .catch(err => {
+                    ShowThongBaoThatBai("Lỗi hệ thống: " + err)
+                });
+        }
+
         // Hàm nhận yêu cầu kết bạn từ server
         connection.off("UpdateFriendRequest");
         connection.on("UpdateFriendRequest", function (response) {
@@ -174,6 +190,20 @@
                     if (TargetId === response.data.senderId) {
                         updateConversationLatestMessage(TargetId)
                     }
+                }
+            }
+        });
+
+        // Nhận yêu cầu refresh tab
+        connection.off("ReceiveRequestRerenderTab");
+        connection.on("ReceiveRequestRerenderTab", function (response)
+        {
+            console.log
+            if (response.success) {
+                // Rerender Conversation
+                if (response.data === "Conversation") {
+                    var TargetId = $("#TargetId").val()
+                    GetListPagingConversation(PageIndexConversation, RowPerPageConversation, () => { setActiveButton(TargetId) })
                 }
             }
         });
