--- a/FE/Views/Home/Message/_MessageContainerPartial.cshtml
+++ b/FE/Views/Home/Message/_MessageContainerPartial.cshtml
@@ -14,7 +14,7 @@
 {
     <div class="lh-1 py-3"
          style="font-size: 12px">@Data[i].GetDateTime()</div>
-    if (Data[i].MessageType == 1)
+    if (Data[i].MessageType == 1 || Data[i].MessageType == 2)
     {
         <div class="row" style="margin-bottom: 12px;">
             <div class="col-12">
